--- a/assignment1_ast4320_daniehei.tex
+++ b/assignment1_ast4320_daniehei.tex
@@ -135,9 +135,20 @@ H = 2/3t.
 \end{equation}
 For the next two combinations, we need to solve the differential equation
 \begin{equation}\label{eq:H^2}
-H^2 = H_0^2\left[\frac{\Omega_{m}}{a^{-3}} + \Omega_{\Lambda}\right].
+H^2 = H_0^2\left[{\Omega_{m}}{a^{-3}} + \Omega_{\Lambda}\right].
 \end{equation}
-We can solve this generally. The solution to this differential equation is
+Knowing that $H=\dot{a}/a$ we get
+\begin{equation}
+\dot{a} = H_0\sqrt{\left({\Omega_{m}}{a^{-3}} + \Omega_{\Lambda}\right)}a.
+\end{equation}
+\begin{equation}
+\Rightarrow \frac{da}{a\sqrt{{\Omega_{m}}{a^{-3}} + \Omega_{\Lambda}}} = H_0dt.
+\end{equation}
+Integrating from $t = 0$ to $t=t_0,$ and $a=0$ to $a=a_0$,we get
+\begin{equation}
+H_0t =  \int_0^{a_0}\frac{da}{a\sqrt{{\Omega_{m}}{a^{-3}} + \Omega_{\Lambda}}}
+\end{equation}
+We can either solve this integral numerically or analytically. We can thankfully find the answer from the notes of Cosmology 1. The solution to this integral is
 \begin{equation}
 a(t) = a_0\left(\frac{\Omega_{m}}{\Omega_{\Lambda}}\right)^{1/3}\left[\sinh\left(\frac{3}{2}\sqrt{\Omega_{\Lambda}}H_0 t\right)\right]^{2/3},
 \end{equation} 
