First version done(?)!

--- a/assignment1_ast4320_daniehei.tex
+++ b/assignment1_ast4320_daniehei.tex
@@ -291,12 +291,14 @@ M_{J,before} = \frac{\pi^{5/2}}{6G^{3/2}\rho_0^{1/2}}\cdot \left(\frac{c}{\sqrt{
 
 \begin{figure}
      \centering
-     \subfloat[][a]{\includegraphics[scale=0.12]{length}\label{fig:length}}
-     \subfloat[][b]{\includegraphics[scale=0.12]{mass}\label{fig:mass}}
-     \caption{Comparison of steady state results (a) x method (b) y method}
-     \label{steady_state}
+     \subfloat[][The Jeans Length before and after the decoupling is mark by a significant drop before it starts increasing.]{\includegraphics[scale=0.12]{length}\label{fig:length}}
+     \subfloat[][The Jeans Length before and after the decoupling is mark by a significant drop before it starts decreasing.]{\includegraphics[scale=0.12]{mass}\label{fig:mass}}
+     \caption{Evolution of Jeans length and mass.}
+     \label{fig:jeans}
 \end{figure}
 
+
+We can see from \ref{fig:jeans} that for both the Jeans length and mass there is a significant drop at recombination. This is because the speed of sound goes from that of a photon gas to that of a normal (ideal) gas. The length and mass then evolves with $z$ (almost inverse of one another), with the length increasing and mass decreasing.
 
 \section{Exercise 4}
 
